2022-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.ch:
	Check options before initialization of kpathsearch parameters.
	This change prevents unwanted looking for texmf.cnf.
	https://github.com/texjporg/tex-jp-build/issues/145
	* bibtex.test, tests/enc-u.aux, tests/enc-u{p,u}.bbl:
	Update tests for ((u)p)BibTeX.

2022-08-22 Luigi Scarso <luigi.scarso@gmail.com>

	* ac/web2c.ac: add potrace as dependency of mflua/mfluajit
	* Makefile.am: add @POTRACE_RULE@
	* configure.ac: add KPSE_POTRACE_FLAGS

2022-08-21  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* help.h: New option '+u' for CTANGLE.

2022-08-06  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Rewrite 'squash' to match description in section 148.

2022-07-16  Karl Berry  <karl@freefriends.org>

	* tex.ch (25.369, <Suppress expansion ...>): disallow
	\noexpand\endwrite, else we get a seg fault because of fetching
	mem[null]. Fix from drf.
	Original report: https://tex.stackexchange.com/questions/609423
	TeX bug entry: https://tug.org/texmfbug/newbug.html#B155endwrite

2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp-help.h ((e)(u)pTeX), help.h ((u)pBibTeX):
	Support guessing input file encodings.
	https://github.com/texjporg/tex-jp-build/issues/142
	* tests/enc-{asc,jis,sjis,euc,utf8{,a,b},amb[012]}.bib,
	tests/enc{,-[es]}.aux, tests/testfield.bst,
	tests/enc-{,[es]}[pu].bbl:
	Add tests for guess encodings & (u)pBibTeX.

2022-06-05  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: CWEB 4.8 release.

2022-05-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.ch:
	Apply max_print_line variable in kpathsea to ((u)p)BibTeX.
	* bibtex.test, tests/exampl.bbl, am/web.am:
	Update tests for ((u)p)BibTeX.

2022-04-30  Andreas Scherer  <https://ascherer.github.io>

	* weav-twill.ch,
	* weave.ch: Reshuffle '\title' changes..

2022-04-27  Andreas Scherer  <https://ascherer.github.io>

	* weav-twill.ch: Avoid non-POSIX conflict with Solaris 11.4.
